Commit2 basic css flex, display basic .info

--- a/DRAFT-Proj1/draftindex.html
+++ b/DRAFT-Proj1/draftindex.html
@@ -11,6 +11,7 @@
 
 
 <div class="container">
+
     <div class="header">
         <div class="title">
             <h1> Poke-Me</h1>
@@ -20,12 +21,14 @@
             <button id= "findButton">Find</button>
         </div>
     </div>
+
     <div class="info">
         <div class="profile">
             <div class="name">
                 <p id="pokemonName">Pokemon Name</p> 
             </div>
-            <div class="picture"></div>
+            <div class="picture">
+            </div>
         </div>
         <div class="data-moves">
             <div class="data">
@@ -36,8 +39,6 @@
             </div>
         </div>
     </div>
-
-
 
 </div>
 
