Set background-color. Format header w/ image

--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
 
 <body>
 
-
 <div class="container"> 
 
     <div class="header">
@@ -28,9 +27,11 @@
             <div class="nameClass">
                 <p id="nameId">Pokemon Name</p> 
             </div>
-            <div class="picture">
-                <img id="pokemonBack" src ="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/back/132.png">
-                <img id="pokemonFront" src ="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/132.png">
+            <div class="picture">         
+               <img id="pokemonBack" src="">
+               <img id="pokemonFront" src="">          
+                <!-- <img id="pokemonBack" src ="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/back/132.png"> -->
+                <!-- <img id="pokemonFront" src ="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/132.png"> -->
             </div>
         </div>
 
@@ -40,7 +41,6 @@
                 <p id="typeId"></p>
                 <p id="heightId"></p>
                 <p id="weightId"></p>
-                <p id="typeId"></p>
             </div>
 
             <div class="moves">
