Delete drafts and add picture movement

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             </div>
             <div class="picture">         
                <img id="pokemonBack" src="">
-               <img id="pokemonFront" src="">          
+               <img id="pokemonFront" class="hide" src="">          
                 <!-- <img id="pokemonBack" src ="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/back/132.png"> -->
                 <!-- <img id="pokemonFront" src ="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/132.png"> -->
             </div>
