include READ.ME with image file

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <h1> Poke-Me</h1>
         </div>
         <div class="search">
-            <input id="nameSearch" type="text" placeholder="Type Pokemon Name"></input>
+            <input id="nameSearch" type="text" placeholder="Type Pokemon Name">
             <button id="findButton">Find</button>
         </div>
     </div>
@@ -25,13 +25,11 @@
     <div class="info">
         <div class="profile">
             <div class="nameClass">
-                <p id="nameId">Pokemon Name</p> 
+                <p id="nameId">Who Will It Be?</p> 
             </div>
             <div class="picture">         
-               <img id="pokemonBack" src="">
-               <img id="pokemonFront" class="hide" src="">          
-                <!-- <img id="pokemonBack" src ="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/back/132.png"> -->
-                <!-- <img id="pokemonFront" src ="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/132.png"> -->
+               <img id="pokemonBack" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRNx7mThLSgFfLO3ZQA-D7L9MlBaF9ZcUPMrQ&usqp=CAU" alt="Pokemon Back">
+               <img id="pokemonFront" class="hide" src="https://st2.depositphotos.com/4201469/11665/v/600/depositphotos_116653256-stock-illustration-vector-color-pokeball-objects-for.jpg" alt="Pokemon Front">          
             </div>
         </div>
 
@@ -45,14 +43,8 @@
 
             <div class="moves">
                 <div class="base">
-                    <h3 id="baseHead"> Base Moves</h3>
+                    <h3 id="baseHead"> Base Stats</h3>
                     <ul class="baseMoves"></ul>
-                    <!-- <p id="hpId"></p>
-                    <p id="attackId"></p>
-                    <p id="defenseId"></p>
-                    <p id="specAttackId"></p>
-                    <p id="specDefenseId"></p>
-                    <p id="speedId"></p> -->
                 </div>
                 <div class="special">
                     <h3 id="specialHead"> Abilties</h3>
@@ -70,13 +62,3 @@
 </html>
 
 
-
-<!-- <p>Bio Data</p>
-<ul class="bioData">
-    <li id="type">Type goes here</li>
-    <li id="weight">Weight goes here</li>
-    <li id="height">Height goes here</li>   
-</ul> -->
-    <!-- data.types[i] --> <!-- data.game_indices.height -->
-
-    <!-- data.sprites.front_default --> <!-- data.species.name -->
